[build-system]
requires = ["poetry-core>=2.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "cli_pprinter"
packages = [{include = "cli_pprinter", from = "src"}]
description = "print in cli with colors (wrapper of termcolor)"
license = "LICENSE"
readme = "README.md"
keywords = ["cli", "pprinter", "print", "colors", "termcolor"]
authors = [
    { name = "Fernando Casale Neto", email = "fcasalen@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
requires-python = ">=3.11"
dynamic = ["version", "dependencies"]

[tool.poetry]
packages = [{include = "cli_pprinter", from = "src"}]
version = "0.0.0"

[tool.poetry.dependencies]
python = "^3.11"
termcolor = "^3.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"
detect = "^2020.12.3"
pytest-cov = "^7.0.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
system = "pep440"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]
